--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
-    "mathjs": "^4.2.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "^5.0.5",
     "sinon": "^5.0.3"
